<resources>
    <string name="app_name">Port and Starboard</string>
    <string name="how_to_navigate_a_ship">How to navigate a ship</string>
    <string name="show_right_name">SHOW RIGHT NAME</string>
    <string name="show_left_name">SHOW LEFT NAME</string>
    <string name="which_side_of_the_ship_is_the_following">Which side of the ship is the following?</string>
    <string name="means_right">MEANS RIGHT</string>
    <string name="means_left">Means Left</string>
    <string name="port">Port</string>
    <string name="starboard">Starboard</string>
</resources>
